--- a/sample.yaml
+++ b/sample.yaml
@@ -1,4 +1,5 @@
 ---
- name: install and configure DB
- hosts: all
- become: yes
+- name: Install apache httpd  (state=present is optional)
+  apt:
+    name: apache2
+    state: present
