--- a/sample.yaml
+++ b/sample.yaml
@@ -1,5 +1,8 @@
 ---
-- name: Install apache httpd  (state=present is optional)
+- hosts: all
+  become: yes
+  tasks: 
+- name: Install apache httpd
   apt:
-    name: apache2
-    state: present
+      name: apache2
+      state: present
