--- a/conditions.yml
+++ b/conditions.yml
@@ -4,7 +4,7 @@
   become: yes
   tasks: 
         - name: install apcahe in ubuntu
-          command: apt-get -y install apache
+          command: apt-get install apache
           when: ansible_os_family == "Debian"
         - name: install httpd for redhat family
           command: yum -y install httpd
