--- a/conditions.yml
+++ b/conditions.yml
@@ -1,6 +1,6 @@
 ---
-- hosts: all
-  user: maha
+- hosts: webserver
+  #user: maha
   become: yes
   tasks: 
         - name: install apcahe in ubuntu
